<resources>
    <string name="app_name">TesteWhiteBoard</string>
    <string name="pick_time">Hora</string>
    <string name="pick_date">Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_add_task">Adicionar Tarefa</string>
    <string name="lbl_work_name">Nome da Avaliação</string>
    <string name="lbl_discipline">Disciplina</string>
    <string name="lbl_date">Data</string>
    <string name="lbl_hour">Hora</string>
    <string name="title_add_task_school">Adicionar Tarefa</string>
    <string name="lbl_grade">Nota</string>
    <string name="btn_save">Salvar</string>
    <string name="lbl_is_done">Já realizado?</string>
    <string name="btn_add_photo">Adicionar Foto</string>
    <string name="title_done_tasks">Tarefas Já Feitas</string>
    <string name="msg_null_list">Não há dados para serem exibidos.</string>
</resources>
