<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.task.TaskSchoolActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lbl_work_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_work_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_work_name"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lbl_discipline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spn_discipline"
        android:layout_below="@+id/lbl_work_name"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_discipline" />

    <Spinner
        android:id="@+id/spn_discipline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_work_name"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/lbl_discipline"
        android:layout_toRightOf="@+id/lbl_discipline"
        android:minWidth="100dp" />

    <ImageButton
        android:id="@+id/btn_add_discipline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_work_name"
        android:layout_toEndOf="@+id/spn_discipline"
        android:layout_toRightOf="@+id/spn_discipline"
        android:background="@drawable/plus"
        android:onClick="addDiscipline" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lbl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_discipline"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spn_discipline"
            android:layout_alignStart="@+id/spn_discipline"
            android:hint="@string/lbl_date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:minWidth="64dp"
            tools:text="30/03/2016" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lbl_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_discipline"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/lbl_date"
        android:layout_toRightOf="@+id/lbl_date">

        <EditText
            android:id="@+id/txt_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt_date"
            android:layout_alignStart="@+id/txt_date"
            android:hint="@string/lbl_hour"
            android:inputType="datetime"
            android:minWidth="64dp"
            tools:text="12:00" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lbl_is_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chk_is_done"
        android:layout_below="@+id/lbl_hour"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_is_done" />

    <CheckBox
        android:id="@+id/chk_is_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_hour"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/lbl_is_done"
        android:layout_toRightOf="@+id/lbl_is_done" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lbl_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_is_done"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/txt_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt_date"
            android:layout_alignStart="@+id/txt_date"
            android:layout_marginTop="8dp"
            android:hint="@string/lbl_grade"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:minWidth="56dp"
            android:visibility="gone"
            tools:text="9,9" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_grade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="saveChanges"
        android:text="@string/btn_save" />

</RelativeLayout>